fix about page title color in dark mode

--- a/app/assets/stylesheets/pages/home.css.scss
+++ b/app/assets/stylesheets/pages/home.css.scss
@@ -14,7 +14,7 @@
 }
 
 .home-lead {
-  color: $on-primary;
+  color: $primary-90;
   margin-bottom: 20px;
 
   .btn,
